Replace direct URL constructors